<resources>
    <string name="app_name">WeatherApp</string>
    <string name="ok">OK</string>
    <string name="today">Today</string>
    <string name="hourly">Hourly</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="feels_like">Feels Like</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">PRESSURE</string>
    <string name="_0">0</string>
    <string name="_0_u00b0">0°</string>
    <string name="_0_percent">0%</string>
    <string name="tbilisi">Tbilisi</string>
    <string name="london">London</string>
    <string name="kingston">Kingston</string>
    <string name="u00b0">°</string>
    <string name="details">DETAILS</string>
    <string name="sound">Sound</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="title">Title</string>
    <string name="sound_settings">Sound Settings</string>
    <string name="language">Language</string>
    <string name="language_settings">Language Settings</string>
    <string name="no_dark_mode">No Dark Mode</string>
    <string name="font_style">Font Style</string>
    <string name="background_color">Background Color</string>
    <string name="app_settings">App Settings</string>
    <string name="webview">WebView</string>
    <string name="do_you_want_to_exit_the_app">Do you want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="close_app">Close App</string>
    <string name="are_you_sure_you_want_to_close">Are you sure you want to close this application?</string>
    <string name="temperature_settings">Temperature Settings</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
</resources>