<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.lnadeem.app.base.BaseCallback" />

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_purple">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_country_georgia"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{(v)->callback.onClick(v)}"
                        android:src="@drawable/ic_georgia" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_country_britain"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{(v)->callback.onClick(v)}"
                        android:src="@drawable/ic_uk" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_country_jamaica"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{(v)->callback.onClick(v)}"
                        android:src="@drawable/ic_jamaica" />

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_menu"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{(v)->callback.onClick(v)}"
                    android:padding="@dimen/_2sdp"
                    android:rotation="90"
                    android:src="@drawable/ic_menu"
                    android:tint="@color/white" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/tbilisi"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_cloud" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_current_temperature_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/CustomTextViewMedium"
                    android:layout_alignTop="@+id/tv_current_temperature_1"
                    android:layout_toEndOf="@+id/tv_current_temperature_1"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:text="@string/u00b0"
                    android:textColor="@color/white"
                    android:textSize="48sp" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="BROKEN CLOUDS" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="32dp"
                android:text="@string/details"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/temperature"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_current_temperature_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="start"
                    android:text="@string/_0_u00b0"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/feels_like"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="start"
                    android:text="@string/_0_u00b0"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="start"
                    android:text="@string/_0_percent"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/pressure"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="start"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>