<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.lnadeem.app.base.BaseCallback" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@color/color_sky_blue">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/bg_round_white_10sdp"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/CustomTextViewBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_settings"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_purple"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_sky_blue"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CustomTextViewSemiBold"
                        android:layout_centerVertical="true"
                        android:text="@string/sound"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:orientation="horizontal"
                        tools:ignore="RelativeOverlap">

                        <RadioButton
                            android:id="@+id/rbOn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:buttonTint="@color/white"
                            android:gravity="center"
                            android:text="@string/on"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/rbOff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:buttonTint="@color/white"
                            android:checked="true"
                            android:gravity="center"
                            android:text="@string/off"
                            android:textColor="@color/white" />

                    </RadioGroup>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>